# TLN-Project3

./: .gitignore  README.md
esercitazioni/: README.md  pyproject.toml
esercitazioni/esercitazione 1/wordnet_conceptnet_mapping/: main.py  pyproject.toml
esercitazioni/esercitazione 1/wordnet_conceptnet_mapping/src/: __init__.py  conceptnet_utils.py  wordnet_utils.py
esercitazioni/esercitazione 2/definition_complexity/: main.py  pyproject.toml  requirements.txt
esercitazioni/esercitazione 2/definition_complexity/src/: __init__.py  load_data.py  similarity.py
esercitazioni/esercitazione 3/content_to_form/: main.py  pyproject.toml  requirements.txt
esercitazioni/esercitazione 3/content_to_form/src/: __init__.py  guessing.py  load_data.py
esercitazioni/esercitazione 4/topic_modelling/: main.py  pyproject.toml  requirements.txt
esercitazioni/esercitazione 4/topic_modelling/src/: __init__.py  pipeline.py
esercitazioni/esercitazione 5/llm_prompting/: main.py  pyproject.toml  requirements.txt
esercitazioni/esercitazione 5/llm_prompting/src/: __init__.py  guess.py  pipeline.py  topic.py
progetto/: README.md  main.py  multilingual.ipynb
progetto/src/: __init__.py  babelnet.py  saving.py
