[project]
name = "llm-prompting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "dotenv>=0.9.9",
    "pandas>=2.3.0",
    "questionary>=2.1.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
